--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
     "sass": "^1.60.0",
     "typescript": "^4.9.5",
